--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scroll": "^1.8.6",
     "react-simple-typewriter": "^3.0.1",
     "react-slick": "^0.28.1",
+    "shooting-stars": "0.0.6",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "typewriter-effect": "^2.18.2",
